recursion.logo.square.FourSquare.scala.error
Erreur de compilation :
FourSquare:2: error: value foreach is not a member of Int
for(k<-4 ){
       ^